Fixes #7515 - Prevent label line breaks in add bookmark modal
(cherry picked from commit 245180fdcfd42b59f1863170e8af0b6f6c907a55)

Conflicts:
	app/assets/stylesheets/application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,7 +150,11 @@ tr.open span.expander {background-image: url(bullet_toggle_minus.png);}
   max-height: 500px;
 }
 
-#host-conflicts-modal .modal-dialog{
+#bookmarks-modal .modal-dialog {
+  width: 750px;
+}
+
+#host-conflicts-modal .modal-dialog {
   width: 650px;
 }
 
